<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_activity_title"
        android:text="@string/main_activity_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/cities_dropdown"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintLeft_toLeftOf="@+id/main_activity_title"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_title"
        app:layout_constraintVertical_bias="0.15"
        android:spinnerMode="dialog"
        android:prompt="@string/main_activity_spinner_hint"/>

    <TextView
        android:id="@+id/main_activity_location_propmpt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_location_prompt"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/cities_dropdown"
        app:layout_constraintRight_toRightOf="@+id/main_activity_title"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_title"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:inputType="number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_location_hint"
        android:textSize="14sp"
        android:id="@+id/range_prompt"
        app:layout_constraintRight_toRightOf="@+id/main_activity_title"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_location_propmpt"
        app:layout_constraintBottom_toBottomOf="@+id/cities_dropdown"/>

    <Button
        android:id="@+id/show_cities"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cities_dropdown"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/black"
        android:text="@string/main_activity_show_button"
        android:onClick="showCities"/>


</androidx.constraintlayout.widget.ConstraintLayout>