<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CitiesActivity"
    android:weightSum="10"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_activity_title"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <ListView
        android:id="@+id/cities_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>

    <TextView
        android:id="@+id/empty_list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_weight="10"
        android:text="@string/location_activity_no_cities"/>

    <Button
        android:id="@+id/go_back_btn"
        android:onClick="goBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_activity_go_back"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

</LinearLayout>